--- a/asm2/src/main/webapp/WEB-INF/web.xml
+++ b/asm2/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,15 @@
 	<welcome-file-list>
 		<welcome-file>redirect.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/views/error/error404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/views/error/error500.jsp</location>
+	</error-page>
+	
 </web-app>
