day la commit thu3

--- a/asm2/src/main/webapp/WEB-INF/web.xml
+++ b/asm2/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,11 @@
 		<location>/views/error/error404.jsp</location>
 	</error-page>
 	
+		<error-page>
+		<error-code>403</error-code>
+		<location>/views/error/error403.jsp</location>
+	</error-page>
+	
 	<error-page>
 		<error-code>500</error-code>
 		<location>/views/error/error500.jsp</location>
